// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapPadding renders 0 1`] = `
Array [
  .c0 {
  wrap-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders function 1`] = `
Array [
  .c0 {
  wrap-padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders negative number 1`] = `
Array [
  .c0 {
  wrap-padding: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-padding: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-padding: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    wrap-padding: July;
  }
}

@media April {
  .c0 {
    wrap-padding: August;
  }
}

@media January {
  .c0 {
    wrap-padding: September;
  }
}

@media April {
  .c0 {
    wrap-padding: November;
  }
}

@media June {
  .c0 {
    wrap-padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-padding: July;
  }
}

@media April {
  .c0 {
    wrap-padding: August;
  }
}

@media January {
  .c0 {
    wrap-padding: September;
  }
}

@media April {
  .c0 {
    wrap-padding: November;
  }
}

@media June {
  .c0 {
    wrap-padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-padding: January;
  }
}

@media April {
  .c0 {
    wrap-padding: December;
  }
}

@media January {
  .c0 {
    wrap-padding: April;
  }
}

@media April {
  .c0 {
    wrap-padding: May;
  }
}

@media June {
  .c0 {
    wrap-padding: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-padding: January;
  }
}

@media April {
  .c0 {
    wrap-padding: December;
  }
}

@media January {
  .c0 {
    wrap-padding: April;
  }
}

@media April {
  .c0 {
    wrap-padding: May;
  }
}

@media June {
  .c0 {
    wrap-padding: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders postitive number 1`] = `
Array [
  .c0 {
  wrap-padding: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders string 1`] = `
Array [
  .c0 {
  wrap-padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapPadding renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
